<resources>
    <string name="app_name">KREAM</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">HOME</string>
    <string name="main_btm_nav_style_title">STYLE</string>
    <string name="main_btm_nav_shop_title">SHOP</string>
    <string name="main_btm_nav_watch_title">WATCH</string>
    <string name="main_btm_nav_my_title">MY</string>

<!--    Login-->
    <string name="login_tv_email">이메일 주소</string>
    <string name="login_tv_password">비밀번호</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_naver_login">네이버로 로그인</string>
    <string name="login_find_email">이메일 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_sign_up">아직 가입하지 않으셨나요? 이메일로 가입</string>
    <string name="login_wrong_email">올바른 이메일 주소를 입력하세요</string>
    <string name="login_wrong_password">영문,숫자,특수문자를 조합해서 입력해주세요. (8~12자)</string>


    <!--    signup-->
    <string name="sign_up_tv_email">이메일 주소 *</string>
    <string name="sign_up_tv_password">비밀번호 *</string>
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_sneakers_size">스니커스 사이즈</string>
    <string name="sign_up_sneakers_size_placeholder">선택하세요</string>
    <string name="sign_up_agreement">[필수] 만14세 이상이며 모두 동의합니다.</string>
    <string name="sign_up_agreement2">[선택] 광고성 정보 수신에 모두 동의합니다.</string>
    <string name="sign_up_sign_up">가입하기</string>




    <!-- Home -->
    <string name="home_tab1">투데이</string>
    <string name="home_tab2">발매정보</string>
    <string name="home_notice">[공지] 택배 없는 날 및 대체 공휴일에 따른 거래 일정 안내</string>
    <string name="home_just_dropped">Just Dropped</string>
    <string name="home_just_dropped_kor">발매 상품</string>
    <string name="home_style_picks">Style Picks!</string>
    <string name="home_most_pop">Most Popular</string>
    <string name="home_most_pop_kor">인기 상품</string>
    <string name="home_off_white">Off-White Collabs</string>
    <string name="home_rec_product">추천 상품</string>
    <string name="home_new_in">New In: Bearbrick</string>
    <string name="home_new_product">신규 상품</string>
    <string name="home_street_wear">Streetwear</string>
    <string name="home_small_leathers">Small Leathers</string>
    <string name="home_contemporary">Contemporary</string>
    <string name="home_luxury_sneakers">Luxury Sneakers</string>
    <string name="home_new_lowest_asks">New Lowest Asks</string>
    <string name="home_new_lowest_asks_kor">새로운 즉시 구매가</string>
    <string name="home_new_highest_bids">New Highest Bids</string>
    <string name="home_new_highest_bids_kor">새로운 즉시 판매가</string>
    <string name="home_upcoming_release">Upcoming Release</string>
    <string name="home_upcoming_release_kor">발매 예정</string>
    <string name="home_lego">Lego</string>
    <string name="home_korean_collection">Korean Collection</string>
    <string name="home_orca_alt">Orca Alternatives</string>
    <string name="home_grey_collection">Grey Collection</string>


    <!--    shop-->
    <string name="shop_tv_search_bar">브랜드명, 모델명, 모델번호 등</string>
    <string name="shop_filter_luxury">럭셔리</string>
    <string name="shop_filter_sneakers">스니커즈</string>
    <string name="shop_filter_clothes">의류</string>
    <string name="shop_filter_acc">패션잡화</string>
    <string name="shop_filter_life">라이프</string>
    <string name="shop_filter_tech">테크</string>
    <string name="shop_product">상품</string>

<!--    product description-->
    <string name="shop_prod_tv_all_size">모든 사이즈</string>
    <string name="shop_tv_latest_price">최근 거래가</string>
    <string name="shop_tv_prod_description">상품 정보</string>
    <string name="shop_tv_prod_model">모델번호</string>
    <string name="shop_tv_prod_release_date">출시일</string>
    <string name="shop_tv_prod_color">대표색상</string>
    <string name="shop_tv_prod_retail_price">발매가</string>

    <string name="shop_prod_tv_market_price">시세</string>
    <string name="shop_prod_buy">구매</string>
    <string name="shop_prod_buy_price">즉시 구매가</string>
    <string name="shop_prod_sell">판매</string>
    <string name="shop_prod_sell_price">즉시 판매가</string>

    <string name="shop_prod_sales">채결 거래</string>
    <string name="shop_prod_asks">판매 입찰</string>
    <string name="shop_prod_bids">구매 입찰</string>
    <string name="shop_prod_size">사이즈</string>
    <string name="shop_prod_sales_price">거래가</string>
    <string name="shop_prod_sales_date">거래일</string>
    <string name="shop_prod_sales_ask_price">판매 희망가</string>
    <string name="shop_prod_sales_bid_price">구매 희망가</string>
    <string name="shop_prod_sales_quantity">수량</string>
    <string name="shop_prod_more_sales">체결 내역 더보기</string>
    <string name="shop_prod_more_bids">입찰 내역 더보기</string>

    <string name="prod_tv_buy_price">즉시 구매가(원)</string>
    <string name="check_after_login">모든 시세는 로그인 후 확인 가능합니다.</string>
    <string name="prod_add_wishlist">관심 상품 추가</string>


<!--    product purchase-->
    <string name="check_before_purchase">구매하시기 전에 \n꼭 확인하세요.</string>
    <string name="continue_purchase">구매 계속</string>
    <string name="purchase_now">즉시 구매하기</string>
    <string name="continue_purchase_now">즉시 구매 계속</string>
    <string name="buy_now_price">즉시 구매가</string>
    <string name="sell_now_price">즉시 판매가</string>
    <string name="address">배송 주소</string>
    <string name="total_pay">총 결제금액</string>
    <string name="add_address_request">배송지를 등록하세요</string>
    
    <string name="checkout_title">배송/결제</string>
    <string name="shipping_method">배송 방법</string>
    <string name="final_order_info">최종 주문 정보</string>
    <string name="payment_method">결제 방법</string>
    <string name="easy_pay">간편 결제</string>
    <string name="pay_at_once">일시불</string>
    <string name="check_out">결제하기</string>

    <string name="add_address">주소 추가하기</string>
    <string name="name">이름</string>
    <string name="name_ph">수령인의 이름</string>
    <string name="phone_no">휴대폰 번호</string>
    <string name="phone_no_ph">- 없이 입력</string>
    <string name="wrong_phone">정확한 휴대폰 번호를 입력해주세요.</string>
    <string name="post_code">우편번호</string>
    <string name="post_code_ph">우편번호를 입력하세요</string>
    <string name="address_1">주소</string>
    <string name="address_1_ph">주소를 입력하세요</string>
    <string name="address_2">상세주소</string>
    <string name="address_2_ph">건물, 아파트 동/호수 입력</string>
    <string name="set_primary_address">기본 배송지 설정</string>
    <string name="save">저장하기</string>

    <string name="done_purchase">즉시 구매가 완료되었습니다.</string>
    <string name="done_purchase_notice">구매한 상품은 전문가 검수 완료 후,\n안전하게 배송될 예정입니다.</string>
    <string name="see_detail">구매 내역 상세보기</string>
    <string name="inspection_fee">검수비</string>
    <string name="shipping_fee">배송비</string>
    <string name="free">무료</string>
    <string name="free_event">무료 이벤트</string>


    <!-- MyPage -->
    <string name="my_my_shopping">내 쇼핑</string>
    <string name="my_my_profile">내 프로필</string>

    <string name="my_edit_profile">프로필 편집</string>
    <string name="my_member">일반</string>
    <string name="my_membership_lev">회원 등급</string>
    <string name="my_points">포인트</string>
    <string name="my_wishlist">관심 상품</string>
    <string name="my_buying">구매 내역</string>
    <string name="my_selling">판매 내역</string>
    <string name="my_total">전체</string>
    <string name="my_current">입찰 중</string>
    <string name="my_pending">진행 중</string>
    <string name="my_history">종료</string>
    <string name="my_more">더보기</string>

    <string name="my_portfolio">보유 상품</string>
    <string name="my_total_value">총 평가금액</string>
    <string name="my_items_cnt">보유 수량</string>
    <string name="my_total_purchase">총 구매가</string>
    <string name="my_total_earn_rate">총 수익률</string>
    <string name="my_gain_loss">평가손익</string>

    <string name="my_setting">설정</string>
    <string name="my_setting_logout">로그아웃</string>

    <string name="my_setting_logout_check">로그아웃 하시겠습니까?</string>
    <string name="my_logout_no">아니오</string>
    <string name="my_logout_yes">네</string>


<!--    style-->
    <string name="style_trending">인기</string>
    <string name="style_following">팔로잉</string>
</resources>