<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/home_icon"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_style"
        android:icon="@drawable/style_icon"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_style_title" />
    <item
        android:id="@+id/menu_main_btm_nav_shop"
        android:icon="@drawable/shop_icon"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_shop_title" />
    <item
        android:id="@+id/menu_main_btm_nav_watch"
        android:icon="@drawable/watch_icon"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_watch_title" />

    <item
        android:id="@+id/menu_main_btm_nav_my"
        android:icon="@drawable/my_page_icon"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_title" />

</menu>
