<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="140dp"
    android:layout_marginHorizontal="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_setting_logout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_logout_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_setting_logout_check"
        android:textColor="@color/black_text"
        android:layout_below="@id/tv_logout"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/logout_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:padding="7dp"
        android:text="@string/my_logout_no"
        android:textColor="@color/black"
        android:layout_below="@id/tv_logout_check"
        android:layout_toStartOf="@id/logout_yes"/>

    <TextView
        android:id="@+id/logout_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:padding="7dp"
        android:text="@string/my_logout_yes"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_below="@id/tv_logout_check"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>